--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: List installed packages
-        run: pip list
+          pip list  # Preverite, ali so vse potrebne knjižnice že nameščene.
 
       - name: Run tests
         run: |
@@ -60,10 +57,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: List installed packages
-        run: pip list
+          pip list  # Preverite, ali so vse potrebne knjižnice že nameščene.
 
       - name: Run tests
         run: |
@@ -74,4 +68,3 @@ jobs:
         with:
           name: test-results-windows
           path: tests/
-
