--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
           python -m pip install --upgrade pip
           pip list  # Preverite, ali so vse potrebne knjižnice že nameščene.
 
+      - name: Show directory contents
+        run: ls -l
+
       - name: Run tests
         run: |
           python -m unittest discover tests
@@ -58,6 +61,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip list  # Preverite, ali so vse potrebne knjižnice že nameščene.
+
+      - name: Show directory contents
+        run: dir
 
       - name: Run tests
         run: |
